Updated the design of all pages containing lists.

--- a/GeneticAlgNetControl/Pages/Index.cshtml
+++ b/GeneticAlgNetControl/Pages/Index.cshtml
@@ -5,6 +5,18 @@
     ViewData["ActivePage"] = "Home";
 }
 
-<div>
-    <span>Welcome!</span>
+<div class="h-100 d-flex flex-column justify-content-center">
+    <div class="row">
+        <div class="col-lg-4 d-flex flex-column justify-content-center align-items-center align-items-lg-end">
+            <img src="~/img/geneticalgnetcontrol-icon.png" alt="Logo" />
+        </div>
+        <div class="col-lg-8 d-flex flex-column justify-content-center align-items-center align-items-lg-start">
+            <div class="h2 font-weight-bold">
+                <span><span class="text-danger">Genetic Alg</span>orithms</span>
+            </div>
+            <div class="h2 font-weight-bold">
+                <span>for <span class="text-danger">Net</span>work <span class="text-danger">Control</span>lability</span>
+            </div>
+        </div>
+    </div>
 </div>
